// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<tr
  className="cf-1dqe1yv"
>
  TableRow
</tr>
`;

exports[`should render extra class name 1`] = `
<tr
  className="extra"
>
  TableRow
</tr>
`;

exports[`should render with type 1`] = `
<tr
  className="cf-74alag"
>
  TableRow
</tr>
`;
